gcc/testsuite/g++.target/aarch64/sve/acle/general-c++/type_redef_14.c
/* { dg-do compile } */

enum svpattern { FOO }; /* { dg-message "note: previous definition here" } */

#pragma GCC aarch64 "arm_sve.h" /* { dg-error "multiple definition of 'enum svpattern'" } */
